versions/v0.15/modules/en/pages/how-tos-for-users/bundle-diffs.adoc
= Generating Diffs to Ignore Modified GitRepos
ifeval::["{product}" == "continuous-delivery"]
:page-languages: [en, de, es, fr, ja, pt, zh]
endif::[]
:revdate: 2025-07-23
:page-revdate: {revdate}
:page-aliases: /bundle-diffs

Continuous Delivery in Rancher is powered by {product_name}. When a user adds a GitRepo CR, then Continuous Delivery creates the associated fleet bundles.

You can access these bundles by navigating to the Cluster Explorer (Dashboard UI), and selecting the `Bundles` section.

The bundled charts may have some objects that are amended at runtime, for example in ValidatingWebhookConfiguration the `caBundle` is empty and the CA cert is injected by the cluster.

This leads the status of the bundle and associated GitRepo to be reported as "Modified"

image::ModifiedGitRepo.png[Static, 600]

Associated Bundle

image::ModifiedBundle.png[Static, 600]

{product_name} bundles support the ability to specify a custom http://jsonpatch.com/[jsonPointer patch].

With the patch, users can instruct {product_name} to ignore object modifications and entire objects.

[NOTE]
====
Use ++diff.comparePatches++ in your ++fleet.yaml++ file to filter expected runtime changes. This helps ensure that a ++Modified bundle++ represents actual configuration drift that requires investigation.
====

[#_when_to_add_diffs]
== When to add diffs

Add a compare patch when Kubernetes components modify resources automatically in a predictable and harmless way after deployment. Some common scenarios include:

* Admission webhooks injecting certificates or configuration
** For example, a cluster can automatically inject a ++caBundle++ into a ++ValidatingWebhookConfiguration++.
* Controllers adding runtime defaults
** For example, a policy engine can inject default CPU limits or tolerations into a Deployment.
* Temporary lifecycle jobs that are automatically removed after completion
** For example, some Helm charts create temporary initialization jobs, that automatically delete themselves after completion.

[#_when_not_to_add_diffs]
== When not to add diffs

Do not use comparePatches to hide unexpected configuration drift or manual changes.

If an administrator manually edits or patches a {product_name}-managed resource, {product_name} marks the bundle as ++Modified++.

Do not ignore these changes with a diff rule. Instead either revert the manual change to match the Git repository or update the Git repository with the new desired state.

[NOTE]
====
You may not need to create diff rules for replica count changes managed by an HPA. Since v0.15.0, {product_name} automatically ignores changes to the replicas field for Deployment and StatefulSet resources when the values remain within the HPA-managed range.
====

[#_configure_compare_patches_example]
== Configure compare patches example

The following ++fleet.yaml++ example handles two common runtime modification scenarios:

* a controller injecting a certificate into a webhook
* a temporary initialization job

.fleet.yaml
[source, yaml]
----
diff:
  comparePatches:

    # Ignore runtime-injected webhook fields
    - apiVersion: admissionregistration.k8s.io/v1
      kind: ValidatingWebhookConfiguration
      name: gatekeeper-validating-webhook-configuration
      operations:
        - op: remove
          path: /webhooks/0/clientConfig/caBundle
        - op: remove
          path: /webhooks/0/rules

    # Ignore temporary jobs in the fleet-demo namespace
    - apiVersion: batch/v1
      kind: Job
      namespace: fleet-demo
      operations:
        - op: remove
          path: /status
----

In this example:
* {product_name} ignores runtime-generated webhook fields
* {product_name} ignores temporary jobs created and deleted in the `fleet-demo` namespace by the application lifecycle

[NOTE]
====
Instead of manually creating JSON Patch paths, use the ++fleet bundlediff++ CLI command. After you commit and push the updated ++fleet.yaml++, {product_name} reconciles the change and transitions the bundle from Modified to Ready.

====

[#_generating_comparepatches_with_fleet_bundlediff]
== Generating comparePatches with `fleet bundlediff`

The `fleet bundlediff` CLI command reads the diff information already present in
`Bundle` and `BundleDeployment` status fields and displays it in a human-readable form.
It can also generate a ready-to-use `diff:` snippet in `fleet.yaml` format so you can
accept the observed drift without manually constructing JSON Patch paths.

[#_viewing_diffs]
=== Viewing diffs

[source,bash]
----
# Show all diffs across all namespaces, grouped by Bundle
fleet bundlediff

# Show diffs for a specific Bundle
fleet bundlediff --bundle my-bundle

# Show diffs for a specific BundleDeployment
fleet bundlediff --bundle-deployment my-bundle-deployment -n cluster-fleet-local-local-abc123

# Output in JSON format
fleet bundlediff --json
----

Default text output groups results by `Bundle` and lists each modified or non-ready
resource together with its JSON Merge Patch:

[source,yaml]
----
Bundle: my-bundle
BundleDeployments with diffs: 1
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  BundleDeployment: cluster-fleet-local-local-abc123/my-bundle-deployment
  Modified Resources (1):
    Resource: ConfigMap.v1 default/my-config
    Status: Modified
    Patch:
    {
      "metadata": {
        "annotations": {
          "timestamp": "2024-01-15T10:30:00Z"
        }
      }
    }
----

[#_generating_a_fleet_yaml_comparepatches_snippet]
=== Generating a `fleet.yaml` `comparePatches` snippet

Use `--fleet-yaml` together with `--bundle-deployment` to produce a `diff:` block that
you can paste directly into your `fleet.yaml`. The command converts the observed JSON
Merge Patch into `remove` operations and merges them with any `comparePatches` already
configured on the `Bundle`, so existing ignores remain intact.

[source,bash]
----
fleet bundlediff \
  --fleet-yaml \
  --bundle-deployment my-bundle-deployment \
  -n cluster-fleet-local-local-abc123
----

Example output:

[source,yaml]
----
diff:
  comparePatches:
  - apiVersion: v1
    kind: ConfigMap
    name: my-config
    namespace: default
    operations:
    - op: remove
      path: /metadata/annotations/timestamp
----

You can redirect the output and append it to your `fleet.yaml` in Git:

[source,bash]
----
fleet bundlediff \
  --fleet-yaml \
  --bundle-deployment my-bundle-deployment \
  -n cluster-fleet-local-local-abc123 >> fleet.yaml
----

After you commit and push the updated `fleet.yaml`, {product_name} reconciles the change and the
bundle transitions from *Modified* to *Ready*. The field itself is not reverted. {product_name}
simply stops reporting it as drift.


[NOTE]
====
The `--fleet-yaml` flag requires `--bundle-deployment`, because the generated output
is merged with the existing `comparePatches` from the associated `Bundle`.
====

See xref:reference/cli/fleet-cli/fleet_bundlediff.adoc[fleet bundlediff]
[{product_name} bundlediff] for the full flag reference.

[#_ignoring_object_modifications]
== Ignoring object modifications

[#_simple_example]
=== Simple Example

In this simple example, we create a Service and ConfigMap that we apply a bundle diff onto.

https://github.com/rancher/fleet-test-data/tree/master/bundle-diffs

[#_gatekeeper_example]
=== Gatekeeper Example

In this example, we are trying to deploy opa-gatekeeper using Continuous Delivery to our clusters.

The opa-gatekeeper bundle associated with the opa GitRepo is in modified state.

Each path in the GitRepo CR, has an associated Bundle CR. The user can view the Bundles, and the associated diff needed in the Bundle status.

In our case the differences detected are as follows:

[source,yaml]
----
  summary:
    desiredReady: 1
    modified: 1
    nonReadyResources:
    - bundleState: Modified
      modifiedStatus:
      - apiVersion: admissionregistration.k8s.io/v1
        kind: ValidatingWebhookConfiguration
        name: gatekeeper-validating-webhook-configuration
        patch: '{"$setElementOrder/webhooks":[{"name":"validation.gatekeeper.sh"},{"name":"check-ignore-label.gatekeeper.sh"}],"webhooks":[{"clientConfig":{"caBundle":"Cg=="},"name":"validation.gatekeeper.sh","rules":[{"apiGroups":["*"],"apiVersions":["*"],"operations":["CREATE","UPDATE"],"resources":["*"]}]},{"clientConfig":{"caBundle":"Cg=="},"name":"check-ignore-label.gatekeeper.sh","rules":[{"apiGroups":[""],"apiVersions":["*"],"operations":["CREATE","UPDATE"],"resources":["namespaces"]}]}]}'
      - apiVersion: apps/v1
        kind: Deployment
        name: gatekeeper-audit
        namespace: cattle-gatekeeper-system
        patch: '{"spec":{"template":{"spec":{"$setElementOrder/containers":[{"name":"manager"}],"containers":[{"name":"manager","resources":{"limits":{"cpu":"1000m"}}}],"tolerations":[]}}}}'
      - apiVersion: apps/v1
        kind: Deployment
        name: gatekeeper-controller-manager
        namespace: cattle-gatekeeper-system
        patch: '{"spec":{"template":{"spec":{"$setElementOrder/containers":[{"name":"manager"}],"containers":[{"name":"manager","resources":{"limits":{"cpu":"1000m"}}}],"tolerations":[]}}}}'
----

Based on this summary, there are three objects which need to be patched.

We will look at these one at a time.

[#_1_validatingwebhookconfiguration]
==== 1. ValidatingWebhookConfiguration:

The gatekeeper-validating-webhook-configuration validating webhook has two ValidatingWebhooks in its spec.

In cases where more than one element in the field requires a patch, that patch will refer these to as `$setElementOrder/ELEMENTNAME`

From this information, we can see the two ValidatingWebhooks in question are:
[source,json]
----
  "$setElementOrder/webhooks": [
    {
      "name": "validation.gatekeeper.sh"
    },
    {
      "name": "check-ignore-label.gatekeeper.sh"
    }
  ],
----

Within each ValidatingWebhook, the fields that need to be ignore are as follows:

[source,json]
----
    {
      "clientConfig": {
        "caBundle": "Cg=="
      },
      "name": "validation.gatekeeper.sh",
      "rules": [
        {
          "apiGroups": [
            "*"
          ],
          "apiVersions": [
            "*"
          ],
          "operations": [
            "CREATE",
            "UPDATE"
          ],
          "resources": [
            "*"
          ]
        }
      ]
    },
----

and

[source,json]
----
     {
      "clientConfig": {
        "caBundle": "Cg=="
      },
      "name": "check-ignore-label.gatekeeper.sh",
      "rules": [
        {
          "apiGroups": [
            ""
          ],
          "apiVersions": [
            "*"
          ],
          "operations": [
            "CREATE",
            "UPDATE"
          ],
          "resources": [
            "namespaces"
          ]
        }
      ]
    }
----

In summary, we need to ignore the fields `rules` and `clientConfig.caBundle` in our patch specification.

The field webhook in the ValidatingWebhookConfiguration spec is an array, so we need to address the elements by their index values.

image::WebhookConfigurationSpec.png[Static, 600]

Based on this information, our diff patch would look as follows:

[source,yaml]
----
  - apiVersion: admissionregistration.k8s.io/v1
    kind: ValidatingWebhookConfiguration
    name: gatekeeper-validating-webhook-configuration
    operations:
    - {"op": "remove", "path":"/webhooks/0/clientConfig/caBundle"}
    - {"op": "remove", "path":"/webhooks/0/rules"}
    - {"op": "remove", "path":"/webhooks/1/clientConfig/caBundle"}
    - {"op": "remove", "path":"/webhooks/1/rules"}
----

[#_2_deployment_gatekeeper_controller_manager]
==== 2. Deployment gatekeeper-controller-manager:

The gatekeeper-controller-manager deployment is modified since there are cpu limits and tolerations applied (which are not in the actual bundle).

[source,json]
----
{
  "spec": {
    "template": {
      "spec": {
        "$setElementOrder/containers": [
          {
            "name": "manager"
          }
        ],
        "containers": [
          {
            "name": "manager",
            "resources": {
              "limits": {
                "cpu": "1000m"
              }
            }
          }
        ],
        "tolerations": []
      }
    }
  }
}
----

In this case, there is only 1 container in the deployment container spec, and that container has cpu limits and tolerations added.

Based on this information, our diff patch would look as follows:

[source,yaml]
----
  - apiVersion: apps/v1
    kind: Deployment
    name: gatekeeper-controller-manager
    namespace: cattle-gatekeeper-system
    operations:
    - {"op": "remove", "path": "/spec/template/spec/containers/0/resources/limits/cpu"}
    - {"op": "remove", "path": "/spec/template/spec/tolerations"}
----

[#_3_deployment_gatekeeper_audit]
==== 3. Deployment gatekeeper-audit:

The gatekeeper-audit deployment is modified in a similarly, to the gatekeeper-controller-manager, with additional cpu limits and tolerations applied.

[source,json]
----
{
  "spec": {
    "template": {
      "spec": {
        "$setElementOrder/containers": [
          {
            "name": "manager"
          }
        ],
        "containers": [
          {
            "name": "manager",
            "resources": {
              "limits": {
                "cpu": "1000m"
              }
            }
          }
        ],
        "tolerations": []
      }
    }
  }
}
----

Similar to gatekeeper-controller-manager, there is only 1 container in the deployments container spec, and that has cpu limits and tolerations added.

Based on this information, our diff patch would look as follows:

[source,yaml]
----
  - apiVersion: apps/v1
    kind: Deployment
    name: gatekeeper-audit
    namespace: cattle-gatekeeper-system
    operations:
    - {"op": "remove", "path": "/spec/template/spec/containers/0/resources/limits/cpu"}
    - {"op": "remove", "path": "/spec/template/spec/tolerations"}
----

[#_combining_it_all_together]
==== Combining It All Together

We can now combine all these patches as follows:

[source,yaml]
----
diff:
  comparePatches:
  - apiVersion: apps/v1
    kind: Deployment
    name: gatekeeper-audit
    namespace: cattle-gatekeeper-system
    operations:
    - {"op": "remove", "path": "/spec/template/spec/containers/0/resources/limits/cpu"}
    - {"op": "remove", "path": "/spec/template/spec/tolerations"}
  - apiVersion: apps/v1
    kind: Deployment
    name: gatekeeper-controller-manager
    namespace: cattle-gatekeeper-system
    operations:
    - {"op": "remove", "path": "/spec/template/spec/containers/0/resources/limits/cpu"}
    - {"op": "remove", "path": "/spec/template/spec/tolerations"}
  - apiVersion: admissionregistration.k8s.io/v1
    kind: ValidatingWebhookConfiguration
    name: gatekeeper-validating-webhook-configuration
    operations:
    - {"op": "remove", "path":"/webhooks/0/clientConfig/caBundle"}
    - {"op": "remove", "path":"/webhooks/0/rules"}
    - {"op": "remove", "path":"/webhooks/1/clientConfig/caBundle"}
    - {"op": "remove", "path":"/webhooks/1/rules"}
----

We can add these now to the bundle directly to test and also commit the same to the `fleet.yaml` in your GitRepo.

Once these are added, the GitRepo should deploy and be in "Active" status.

[#_ignoring_entire_objects]
== Ignoring entire objects

When installing a chart such as link:https://developer.hashicorp.com/consul/docs/k8s/helm[Consul], a job named
`consul-server-acl-init` is created, then deleted once it has successfully completed.

That chart can be installed by creating a `GitRepo` pointing to a git repository using a `fleet.yaml` such as:

[source,yaml]
----
defaultNamespace: consul
helm:
  releaseName: test-consul
  chart: "consul"
  repo: "https://helm.releases.hashicorp.com"

  values:
    global:
      name: consul
      acls:
        manageSystemACLs: true
----

Installing this chart will result in the `GitRepo` reporting a `Modified` status, with job `consul-server-acl-init`
missing, once that job has completed.

This can be remedied with the following bundle diff in our `fleet.yaml`:
[source,yaml]
----
diff:
  comparePatches:
  - apiVersion: batch/v1
    kind: Job
    namespace: consul
    name: consul-server-acl-init
    operations:
    - {"op":"ignore"}
----

In some cases, the full name of the job may not be known in advance, for instance when it is generated.
Furthermore, a given workload may create multiple jobs in the same namespace, which would typically lead to one bundle
diff per job.

To make these situations easier to handle, jobs can also be ignored:

- through a regular expression on their names, in which case the above diff could look like:
[source,yaml]
----
diff:
  comparePatches:
  - apiVersion: batch/v1
    kind: Job
    namespace: consul
    name: 'consul-server.*'
    operations:
    - {"op":"ignore"}
----

- or by specifying an empty `name` field, or omitting that field altogether, in which case all jobs living in that
namespace (in this example in the `consul` namespace) will be ignored.

More information on the supported regex syntax link:https://pkg.go.dev/regexp/syntax[here].

[#_horizontal_pod_autoscaling]
== Horizontal Pod Autoscaling

When dealing with Deployments or StatefulSets referenced by a Horizontal Pod Autoscaler, bundle diffs are no longer
necessary to address updates in replica counts within the HPA's configured interval.
The Fleet agent will automatically filter these updates away; as a result, the source bundle deployment will not be
considered _modified_.

However, if a Deployment or StatefulSet's `replicas` field is set to a value above or below the interval tolerated by an
HPA referencing it, that modification will still appear in the source bundle deployment's status.

Both `autoscaling/v1` and `autoscaling/v2` are supported.

An empty `minReplicas` field in an HPA will be interpreted as `1`.
